force-app/main/default/objects/Initiatives__c/Initiatives__c.object-meta.xml
<CustomObject>
    <label>Initiatives</label>
    <nameField>
        <label>Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>