force-app/main/default/objects/Initiatives__c/fields/Actual_L1__c.field-meta.xml
<CustomField>
    <fullName>Actual_L1__c</fullName>
    <label>Actual L1</label>
    <summarizedField>Benefit__c.Total_Benefit_Sum__c</summarizedField>
    <summaryFilterItems>
        <field>Benefit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>L1</value>
    </summaryFilterItems>
    <summaryForeignKey>Benefit__c.BE_Activities__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>