force-app/main/default/objects/Initiatives__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>IF(OR(( 
Actual_L1__c &gt; 0 &amp;&amp; 
Finance_Approval_Validated__c = TRUE &amp;&amp; 
Finance_Approval_Implemented__c = TRUE &amp;&amp; 
Sponsor_Approval__c = TRUE),( 
Actual_L2__c &gt; 0 &amp;&amp; 
Sponsor_Approval__c = TRUE),( 
Actual_L3__c &gt; 0 &amp;&amp; 
Sponsor_Approval__c = TRUE) 
) ,&apos;Approved&apos; ,&apos;Not Approved&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>