force-app/main/default/objects/Initiatives__c/fields/Benefits_Projection__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Projection__c</fullName>
    <formula>IF(Total_Actuals__c = 0,  Total_Forecast__c ,  Total_Actuals__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefits Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>