force-app/main/default/objects/Initiatives__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>SEAU</fullName>
            </value>
            <value>
                <fullName>SE-EE</fullName>
            </value>
            <value>
                <fullName>SEAM</fullName>
            </value>
            <value>
                <fullName>SLMT</fullName>
            </value>
            <value>
                <fullName>Business  Excellence</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>