force-app/main/default/objects/Initiatives__c/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>