force-app/main/default/objects/Initiatives__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Brunei Darussalam</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Iraq</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Kuwait</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
            <value>
                <fullName>Myanmar</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>Oman</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Qatar</fullName>
            </value>
            <value>
                <fullName>Russian Federation</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>United States of America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>