force-app/main/default/objects/Initiatives__c/fields/Deliverable_Summary__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Summary__c</fullName>
    <description>Deliverable Summary (Character Limit of 1,500)</description>
    <inlineHelpText>Deliverable Summary (Character Limit of 1,500)</inlineHelpText>
    <label>Deliverable Summary</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>