force-app/main/default/objects/Initiatives__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description (Character Limit of 255)</description>
    <inlineHelpText>Description (Character Limit of 255)</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>