force-app/main/default/objects/Initiatives__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>used for survey in home page</description>
    <inlineHelpText>Character Limit of 32,768</inlineHelpText>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>