force-app/main/default/objects/Initiatives__c/fields/Finance_Approval_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Implemented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Approval - Implemented</label>
    <type>Checkbox</type>
</CustomField>