force-app/main/default/objects/Initiatives__c/fields/Finance_Approval_Validated__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Approval - Validated</label>
    <type>Checkbox</type>
</CustomField>