force-app/main/default/objects/Initiatives__c/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <label>Finance Approver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jodi Herring</fullName>
            </value>
            <value>
                <fullName>George Thompson</fullName>
            </value>
            <value>
                <fullName>Celeste Ho</fullName>
            </value>
            <value>
                <fullName>Kelly Rose</fullName>
            </value>
            <value>
                <fullName>Els Janssens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>