force-app/main/default/objects/Initiatives__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <description>Goals (Character Limit of 1,000)</description>
    <inlineHelpText>Goals (Character Limit of 1,000)</inlineHelpText>
    <label>Goals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>