force-app/main/default/objects/Initiatives__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>