force-app/main/default/objects/Initiatives__c/fields/JV_Information__c.field-meta.xml
<CustomField>
    <fullName>JV_Information__c</fullName>
    <label>JV Information</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>