force-app/main/default/objects/Initiatives__c/fields/L1_Forecast_Value__c.field-meta.xml
<CustomField>
    <fullName>L1_Forecast_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>L1 Forecast Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>