force-app/main/default/objects/Initiatives__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead (Other Than Owner)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>