force-app/main/default/objects/Initiatives__c/fields/Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned__c</fullName>
    <description>Lessons Learned (Character Limit of 1,000)</description>
    <inlineHelpText>Lessons Learned (Character Limit of 1,000)</inlineHelpText>
    <label>Lessons Learned</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>