force-app/main/default/objects/Initiatives__c/fields/Next_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Next_Milestone__c</fullName>
    <label>Next Milestone</label>
    <type>TextArea</type>
</CustomField>