force-app/main/default/objects/Initiatives__c/fields/Next_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Milestone_Date__c</fullName>
    <label>Next Milestone Date</label>
    <type>Date</type>
</CustomField>