force-app/main/default/objects/Initiatives__c/fields/Overall_RAG__c.field-meta.xml
<CustomField>
    <fullName>Overall_RAG__c</fullName>
    <label>Overall RAG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>