force-app/main/default/objects/Initiatives__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <description>Overall Status (Character Limit of 255)</description>
    <inlineHelpText>Overall Status (Character Limit of 255)</inlineHelpText>
    <label>Overall Status</label>
    <type>TextArea</type>
</CustomField>