force-app/main/default/objects/Initiatives__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idea</fullName>
            </value>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>