force-app/main/default/objects/Initiatives__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <label>Practitioner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>