force-app/main/default/objects/Initiatives__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>EU/AF</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
                <isActive>false</isActive>
                <label>Canada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>