force-app/main/default/objects/Initiatives__c/fields/Regional_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Regional_Cluster__c</fullName>
    <description>Sub Category of Region (Created for &quot;Shipping&quot; Business Unit)</description>
    <inlineHelpText>Sub Category of Region (Created for &quot;Shipping&quot; Business Unit)</inlineHelpText>
    <label>Regional Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Southeast Asia</fullName>
            </value>
            <value>
                <fullName>PHILIPPINES</fullName>
            </value>
            <value>
                <fullName>North East Asia</fullName>
            </value>
            <value>
                <fullName>BUKOM</fullName>
            </value>
            <value>
                <fullName>TABANGAO</fullName>
            </value>
            <value>
                <fullName>SIETCO</fullName>
            </value>
            <value>
                <fullName>Middle East South Asia</fullName>
            </value>
            <value>
                <fullName>CHEMICALS</fullName>
            </value>
            <value>
                <fullName>UPSTREAM</fullName>
            </value>
            <value>
                <fullName>IGJV</fullName>
            </value>
            <value>
                <fullName>APME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>