force-app/main/default/objects/Initiatives__c/fields/SharePoint_Repository__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Repository__c</fullName>
    <label>SharePoint Repository</label>
    <type>Url</type>
</CustomField>