force-app/main/default/objects/Initiatives__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Authorizing Sponsor</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>