force-app/main/default/objects/Initiatives__c/fields/Sponsor_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorizing Sponsor Final Approval</label>
    <type>Checkbox</type>
</CustomField>