force-app/main/default/objects/Initiatives__c/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <label>Stakeholders</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>