force-app/main/default/objects/Initiatives__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IMAGE(
CASE(Overall_RAG__c,
&quot;Red&quot;, &quot;http://www.stickpng.com/assets/images/58afdad6829958a978a4a693.png&quot;, 
&quot;Amber&quot;, &quot;https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Circle_Fulvous_Solid.svg/600px-Circle_Fulvous_Solid.svg.png&quot;,
&quot;Green&quot;, &quot;https://melbournechapter.net/images/green-transparent-color-4.png&quot;,
&quot;--None--&quot;, &quot;https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/NA_gills_icon.svg/300px-NA_gills_icon.svg.png&quot;,

NULL

),

&quot;&quot;,

16,16
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG Status</label>
    <type>Text</type>
</CustomField>