force-app/main/default/objects/Initiatives__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EUSA</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>GOCS</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>C&amp;P</fullName>
            </value>
            <value>
                <fullName>SEE</fullName>
            </value>
            <value>
                <fullName>SENA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>