force-app/main/default/objects/Initiatives__c/fields/Total_Actual_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Benefits__c</fullName>
    <formula>Actual_L1__c + Actual_L2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Benefits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>