force-app/main/default/objects/Initiatives__c/fields/Total_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Total_Actuals__c</fullName>
    <label>Total Actuals</label>
    <summarizedField>Benefit__c.Total_Benefit__c</summarizedField>
    <summaryFilterItems>
        <field>Benefit__c.Level__c</field>
        <operation>notEqual</operation>
        <value>L3</value>
    </summaryFilterItems>
    <summaryForeignKey>Benefit__c.BE_Activities__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>