force-app/main/default/objects/Initiatives__c/fields/Total_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast__c</fullName>
    <formula>L1_Forecast_Value__c + L2_Forecast_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>