force-app/main/default/objects/Initiatives__c/fields/Value_Group__c.field-meta.xml
<CustomField>
    <fullName>Value_Group__c</fullName>
    <description>Value Group Category added for Shipping Initiatives</description>
    <label>Value Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Commercial*</fullName>
            </value>
            <value>
                <fullName>EU/AF</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>FG Other</fullName>
            </value>
            <value>
                <fullName>FG1</fullName>
            </value>
            <value>
                <fullName>FG2</fullName>
            </value>
            <value>
                <fullName>FG3</fullName>
            </value>
            <value>
                <fullName>FG4</fullName>
            </value>
            <value>
                <fullName>FG5</fullName>
            </value>
            <value>
                <fullName>Technology*</fullName>
            </value>
            <value>
                <fullName>Time Charter Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>