force-app/main/default/objects/Initiatives__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Standardisation</fullName>
            </value>
            <value>
                <fullName>Cargo</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Passage</fullName>
            </value>
            <value>
                <fullName>C&amp;P - Category Management</fullName>
            </value>
            <value>
                <fullName>Cargo Boil Off</fullName>
                <isActive>false</isActive>
                <label>Cargo / Boil Off</label>
            </value>
            <value>
                <fullName>Category Management</fullName>
                <isActive>false</isActive>
                <label>Category Management</label>
            </value>
            <value>
                <fullName>Fuel Management</fullName>
                <isActive>false</isActive>
                <label>Fuel Management</label>
            </value>
            <value>
                <fullName>Opex</fullName>
                <isActive>false</isActive>
                <label>Opex</label>
            </value>
            <value>
                <fullName>Passage Utilisation</fullName>
                <isActive>false</isActive>
                <label>Passage / Utilisation</label>
            </value>
            <value>
                <fullName>Standards</fullName>
                <isActive>false</isActive>
                <label>Standards</label>
            </value>
            <value>
                <fullName>Unclassified</fullName>
                <isActive>false</isActive>
                <label>Unclassified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>