force-app/main/default/objects/Initiatives__c/fields/WoW_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>WoW_Project_Type__c</fullName>
    <label>WoW Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Process</fullName>
            </value>
            <value>
                <fullName>Process_Change</fullName>
                <label>Process Change</label>
            </value>
            <value>
                <fullName>Clarification</fullName>
                <label>Process Clarification</label>
            </value>
            <value>
                <fullName>Playbook L3</fullName>
                <label>Playbook</label>
            </value>
            <value>
                <fullName>Endur</fullName>
            </value>
            <value>
                <fullName>IMOS</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>3D</fullName>
            </value>
            <value>
                <fullName>Energy Component</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>