force-app/main/default/objects/Initiatives__c/recordTypes/Coaching.recordType-meta.xml
<RecordType>
    <fullName>Coaching</fullName>
    <active>true</active>
    <description>Business Excellence is coaching business resource who is leading project</description>
    <label>Coached Project</label>
</RecordType>