force-app/main/default/objects/Initiatives__c/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <description>New project expected to accrue benefits for T&amp;S.</description>
    <label>Project</label>
</RecordType>