force-app/main/default/objects/Initiatives__c/recordTypes/Run_Maintain.recordType-meta.xml
<RecordType>
    <fullName>Run_Maintain</fullName>
    <active>true</active>
    <description>Business Excellence work not directly attributable to a project</description>
    <label>Run &amp; Maintain</label>
</RecordType>