force-app/main/default/objects/Initiatives__c/listViews/All_Shipping_Initiatives.listView-meta.xml
<ListView>
    <fullName>All_Shipping_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Sponsor__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Shipping</value>
    </filters>
    <label>All Shipping Initiatives</label>
</ListView>